# todo-cli

./: LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  __main__.py  cli.py  tags.py  tasks.py
app/repositories/: tag_repository.py  task_repository.py
app/src/: tags.py  tasks.py
app/utils/: helpers.py
configs/: __init__.py  database.py
models/: tag_model.py  task_model.py
repositories/: tag_repository.py  task_repository.py
todo/: __init__.py  __main__.py  cli.py
todo/models/: task_model.py
todo/repositories/: tag_repository.py  task_repository.py
todo/src/: tags.py  tasks.py
todo/utils/: helpers.py
